Fix for bug 11212 -- Needed to preserve scrolled state between collection-selector renderings. Also added code to fix the inevitably broken width/scrollbar stuff in both flavors of IE.
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@6126 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/cosmo/src/main/webapp/templates/default/pim.css
+++ b/cosmo/src/main/webapp/templates/default/pim.css
@@ -491,7 +491,7 @@
 }
 #collectionSelectorContainer {
     border-bottom: 1px solid #ccc;
-    overflow: auto;
+    overflow: auto; overflow-y: auto; overflow-x: hidden;
 }
 #collectionSelectorOrLabel {
     padding-top: 8px;
